# dockered_marimo

./: .marimo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
