[project]
name = "notebook_runtime_dependencies"
version = "0.1.0"
description = "This is not a real project, just a setup to generate requirements.txt to use inside a Docker container."
requires-python = ">=3.10"
dependencies = [
    "db-dtypes>=1.4.1",
    "duckdb>=1.2.0",
    "fastavro>=1.10.0",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-bigquery-storage>=2.28.0",
    "google-cloud-storage>=3.0.0",
    "marimo>=0.11.9",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
    "sqlglot>=26.6.0",
]
